// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sticker> renders default Sticker 1`] = `
<span
  className="Van-Sticker Van-Sticker--circle"
>
  <span>
    My sticker
  </span>
</span>
`;

exports[`<Sticker> renders splash Sticker 1`] = `
<span
  className="Van-Sticker Van-Sticker--splash"
>
  <span>
    My sticker
  </span>
</span>
`;

exports[`<Sticker> renders with specific attributes 1`] = `
<span
  className="Van-Sticker Van-Sticker--circle"
  data-id="0"
>
  <span>
    My sticker
  </span>
</span>
`;

exports[`<Sticker> renders with specific className 1`] = `
<span
  className="Van-Sticker Van-Sticker--circle my-class"
>
  <span>
    My sticker
  </span>
</span>
`;
